--- a/cv.css
+++ b/cv.css
@@ -4,6 +4,14 @@
       font-size: 16px;
       width: 780px;
 }
+.name{
+  color: green;
+}
+
+.contact{
+  text-decoration: underline;
+  font-style: italic;  
+}
 
 strong{
       font-size: 26px;
@@ -42,10 +50,10 @@ h2{
                 margin-bottom:10px;
 }
 #forma-gauche p{
-                
+
 }
 .droite{
-        margin-left: 170px;
+        margin-left: 200px;
         margin-top: 40px;
 }
 
